--- a/task-manager/pom.xml
+++ b/task-manager/pom.xml
@@ -14,6 +14,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
         <!-- Βιβλιοθήκη JSON-Simple -->
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
