refactor reminder handling and task deletion logic; enhance reminder deletion and update task statuses in JSON

--- a/task-manager/src/main/resources/medialab/tasks.json
+++ b/task-manager/src/main/resources/medialab/tasks.json
@@ -110,6 +110,30 @@
       "title": "Develop UI",
       "category": "Work",
       "priority": "High",
+      "status": "DELAYED"
+    },
+    {
+      "dueDate": "2025-02-25",
+      "description": "Testing deletion of priority",
+      "title": "Task with Priority",
+      "category": "General",
+      "priority": "default",
+      "status": "OPEN"
+    },
+    {
+      "dueDate": "2025-02-25",
+      "description": "Testing reminder on completed task",
+      "title": "Completed Task",
+      "category": "General",
+      "priority": "Low",
+      "status": "COMPLETED"
+    },
+    {
+      "dueDate": "2024-12-20",
+      "description": "Create the user interface",
+      "title": "Develop UI",
+      "category": "Work",
+      "priority": "High",
       "status": "OPEN"
     },
     {
