add functionality to modify category and priority names; implement reminder modification feature in terminal interface

--- a/task-manager/src/main/resources/medialab/tasks.json
+++ b/task-manager/src/main/resources/medialab/tasks.json
@@ -481,7 +481,7 @@
       "title": "Marketing Plan",
       "category": "Planning",
       "priority": "Medium",
-      "status": "OPEN"
+      "status": "DELAYED"
     }
   ]
 }
